--- a/vrsiX19/projectCfg/project.properties
+++ b/vrsiX19/projectCfg/project.properties
@@ -1,7 +1,7 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sun May 21 00:11:32 PDT 2023
-#Sun May 21 00:11:32 PDT 2023
+#Last Saved on: Mon Sep 04 11:31:33 PDT 2023
+#Mon Sep 04 11:31:33 PDT 2023
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 gaugeLimitsGauge\ Limits_Y=387
 gaugeLimitsGauge\ Limits_X=757
@@ -33,9 +33,10 @@ CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 engine_constantsEngine\ Constants_Y=263
 engine_constantsEngine\ Constants_X=627
 commPort=
+Triggers.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
 airdensity_curve_Set\ X\ Axis\ Minimum=-40.0
-protocolEnvelope=
 refTable_001_txtBiasResistor=2490
+protocolEnvelope=
 mapCalCalibrate\ MAP_Y=295
 mapCalCalibrate\ MAP_X=739
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
@@ -63,8 +64,8 @@ CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 dashBoardFile=/dashboard//dashboard.dash
 tuneFileDir=/home/chris/lemons/speeduino/Tunes/Generic
 refTable_000_txtResistor3=200
-injCharsInjector\ Characteristics_width=398
 refTable_000_txtResistor2=800
+injCharsInjector\ Characteristics_width=398
 refTable_000_txtResistor1=5500
 refTable_000_chkCelsius=true
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
@@ -74,5 +75,5 @@ CommSettingzenCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
 gaugeLimitsGauge\ Limits_height=336
 mapCalCalibrate\ MAP_width=433
 injector_timing_curve_Set\ X\ Axis\ Minimum=0.0
-ecuSettings=AFR|CAN_COMMANDS_OFF|FAHRENHEIT|NEW_COMMS|enablehardware_test|resetcontrol_standard|
 triggerSettingsTrigger\ Settings_width=429
+ecuSettings=AFR|CAN_COMMANDS_OFF|FAHRENHEIT|NEW_COMMS|enablehardware_test|resetcontrol_standard|
