--- a/vrsiX19/projectCfg/project.properties
+++ b/vrsiX19/projectCfg/project.properties
@@ -1,14 +1,15 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Mon Sep 04 11:31:33 PDT 2023
-#Mon Sep 04 11:31:33 PDT 2023
+#Last Saved on: Sat Feb 24 21:04:59 PST 2024
+#Sat Feb 24 21:04:59 PST 2024
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 gaugeLimitsGauge\ Limits_Y=387
 gaugeLimitsGauge\ Limits_X=757
+sensorFiltersAnalog\ sensor\ filters_width=593
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 canId=0
 refTable_001_chkFahrenheit=false
-firmwareDescription=Speeduino 202207.1
+firmwareDescription=Speeduino 2023.05
 injCharsInjector\ Characteristics_Y=222
 injCharsInjector\ Characteristics_X=757
 refTable_001_chkCelsius=true
@@ -33,24 +34,30 @@ CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 engine_constantsEngine\ Constants_Y=263
 engine_constantsEngine\ Constants_X=627
 commPort=
-Triggers.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
+Triggers.ActiveTriggers=cltTempWarning|playRacecarWOT|TriggeredPage0 Refresh\:  vssRefresh > 0 |
 airdensity_curve_Set\ X\ Axis\ Minimum=-40.0
 refTable_001_txtBiasResistor=2490
 protocolEnvelope=
 mapCalCalibrate\ MAP_Y=295
 mapCalCalibrate\ MAP_X=739
+userDash0.FileName=Acceleration_Performance.dash
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 engine_constantsEngine\ Constants_height=585
+pressureSensorsPressure\ Transducers_height=485
+userDash0.DashName=Acceleration Performance
 airdensity_curveIAT\ density\ correction_height=351
 airdensity_curveIAT\ density\ correction_width=504
 refTable_000_txtBiasResistor=0
 CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
 baudRate=115200
+pressureSensorsPressure\ Transducers_width=456
 CommSettingCom\ Port=
 refTable_000_chkFahrenheit=false
 refTable_001_txtResistor3=200
 refTable_001_txtResistor2=800
 refTable_001_txtResistor1=5500
+pressureSensorsPressure\ Transducers_Y=313
+pressureSensorsPressure\ Transducers_X=728
 triggerSettingsTrigger\ Settings_Y=286
 triggerSettingsTrigger\ Settings_X=712
 ecuConfigFile=mainController.ini
@@ -67,6 +74,8 @@ refTable_000_txtResistor3=200
 refTable_000_txtResistor2=800
 injCharsInjector\ Characteristics_width=398
 refTable_000_txtResistor1=5500
+sensorFiltersAnalog\ sensor\ filters_Y=296
+sensorFiltersAnalog\ sensor\ filters_X=659
 refTable_000_chkCelsius=true
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 sparkSettingsSpark\ Settings_height=431
@@ -75,5 +84,6 @@ CommSettingzenCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
 gaugeLimitsGauge\ Limits_height=336
 mapCalCalibrate\ MAP_width=433
 injector_timing_curve_Set\ X\ Axis\ Minimum=0.0
+sensorFiltersAnalog\ sensor\ filters_height=518
 triggerSettingsTrigger\ Settings_width=429
 ecuSettings=AFR|CAN_COMMANDS_OFF|FAHRENHEIT|NEW_COMMS|enablehardware_test|resetcontrol_standard|
