--- a/vrsiX19/projectCfg/vehicle.properties
+++ b/vrsiX19/projectCfg/vehicle.properties
@@ -1,7 +1,8 @@
 #Vehicles Attributes.
 #TunerStudio by Philip Tobin
-#Sun May 21 00:11:32 PDT 2023
+#Tue Feb 27 18:56:31 PST 2024
 converterStall=
+injectorSize=205
 firstGearRatio=
 fourthGearRatio=
 finalDriveRatio=
@@ -11,3 +12,4 @@ weight=
 thirdGearRatio=
 sixthGearRatio=
 secondGearRatio=
+engineDisplacement=2800
