--- a/stm32_dash/platformio.ini
+++ b/stm32_dash/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
 	rlogiacco/CircularBuffer@^1.3.3
+build_unflags =
+	-std=gnu++17
 build_flags = 
 	-Os
 	-flto
@@ -41,3 +43,4 @@ build_flags =
 	-DSPI_READ_FREQUENCY=15000000
 	-DSPI_TOUCH_FREQUENCY=2500000
 	-DSUPPORT_TRANSACTIONS=1
+	-std=gnu++20
