Link in a printf that actually supports floats... we have the resources.

--- a/stm32_dash/platformio.ini
+++ b/stm32_dash/platformio.ini
@@ -22,6 +22,7 @@ build_flags =
 	-flto
 	--specs=nano.specs
 	--specs=nosys.specs
+	-D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
 	-DENABLE_HWSERIAL1
 	-DENABLE_HWSERIAL2
 	-DUSER_SETUP_LOADED=1
