--- a/stm32_dash/platformio.ini
+++ b/stm32_dash/platformio.ini
@@ -14,7 +14,8 @@ board = genericSTM32F401CC
 framework = arduino
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
-	rlogiacco/CircularBuffer@^1.3.3
+	rlogiacco/CircularBuffer@^1.4.0
+	mikalhart/TinyGPSPlus@1.0.3
 build_unflags =
 	-std=gnu++17
 build_flags = 
