wip on poting tune

--- a/vrsiX19/projectCfg/project.properties
+++ b/vrsiX19/projectCfg/project.properties
@@ -1,190 +1,192 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Mon Mar 25 21:26:22 PDT 2024
-#Mon Mar 25 21:26:22 PDT 2024
-mapCalCalibrate\ MAP_width=433
-iat_retard_curve_Set\ X\ Axis\ Minimum=32.0
-injCharsInjector\ Characteristics_width=398
-airdensity_curveIAT\ density\ correction_Y=380
-engineProtectionHard\ Limit\ Configuration_height=626
-airdensity_curveIAT\ density\ correction_X=704
-egoControlAFR/O2_Y=286
-egoControlAFR/O2_X=729
-reset_controlReset\ Control_width=398
-egoControlAFR/O2_height=539
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
-reset_controlReset\ Control_Y=453
-sparkSettingsSpark\ Settings_height=455
-reset_controlReset\ Control_X=757
-vrsiX19.veTable1Tbl_minCltFilter=130.0
-warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_Y=366
-warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_X=286
-veTableDialogVE\ Table_width=565
-injector_timing_curve_Set\ X\ Axis\ Minimum=0.0
-afterstart_enrichment_time_Set\ X\ Axis\ Minimum=-40.0
-engine_constantsEngine\ Constants_Y=263
-engine_constantsEngine\ Constants_X=627
-engine_constantsEngine\ Constants_width=669
-ASEAfterstart\ Enrichment(ASE)_height=968
-baroFuel_curveBaro\ fuel\ correction_width=456
-VeAnalyzePanel_veTable1Tbl_minChangeThreshold=0.0
-iat_retard_curveIAT\ timing\ retard_height=357
-veTableDialogVE\ Table_Y=47
-veTableDialogVE\ Table_X=1272
-triggerSettingsTrigger\ Settings_Y=286
-triggerSettingsTrigger\ Settings_X=712
-iat_retard_curveIAT\ timing\ retard_Y=377
-iat_retard_curveIAT\ timing\ retard_X=757
-VeAnalyzePanel_veTable1Tbl_weightThreshold=0.0
-clt_advance_curve_Set\ X\ Axis\ Minimum=-40.0
-egoControlAFR/O2_width=454
-triggerSettingsTrigger\ Settings_height=539
-sensorFiltersAnalog\ sensor\ filters_width=593
-idleAdvanceSettingsIdle\ Advance\ Settings_height=385
-afterstart_enrichment_curve_Set\ X\ Axis\ Minimum=-40.0
-triggerSettingsTrigger\ Settings_width=487
-lambdaTable1TblLambda\ Table_height=435
-refTable_000_txtBiasResistor=1100.0
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
-inj_trimadInjector\ Cyl\ 1-4\ Trims_height=547
-inj_trimadInjector\ Cyl\ 1-4\ Trims_Y=282
-inj_trimadInjector\ Cyl\ 1-4\ Trims_X=703
-CommSettingBaud\ Rate=115200
-primePWPriming\ Pulsewidth_height=476
-warmup_afr_curve_Set\ X\ Axis\ Minimum=-40.0
-lambdaTable1TblLambda\ Table_Y=338
-lambdaTable1TblLambda\ Table_X=616
-userDash0.FileName=Acceleration_Performance.dash
-CommSettingCom\ Port=
-CommSettingzenCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
-refTable_000_txtTemp3=200
-CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
-refTable_000_txtTemp2=150
-refTable_000_txtTemp1=93
-airdensity_curveIAT\ density\ correction_width=504
-refTable_001_chkFahrenheit=false
-VeAnalyzePanel_veTable1Tbl_maxWeight=1.7976931348623157E308
-iacClosedLoop_curve_Set\ X\ Axis\ Minimum=-40.0
-sensorFiltersAnalog\ sensor\ filters_Y=296
-CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
-sensorFiltersAnalog\ sensor\ filters_X=659
-sparkTblIgnition\ Advance\ Table_height=435
-refTable_001_txtTemp3=100
-refTable_001_txtTemp2=50
-refTable_001_txtTemp1=0
-tuneFileDir=/home/chris/workspace/anesthetic/vrsiX19
-refTable_000_chkCelsius=false
-iat_retard_curveIAT\ timing\ retard_width=398
-outputtest1Test\ Output\ Hardware_Y=292
-selectedComDriver=Multi Interface MegaSquirt Driver
-outputtest1Test\ Output\ Hardware_X=459
-idleAdvanceSettingsIdle\ Advance\ Settings_Y=363
-idleAdvanceSettingsIdle\ Advance\ Settings_X=298
-priming_pw_curve_Set\ X\ Axis\ Minimum=-40.0
-logFileDir=/home/chris/workspace/anesthetic/vrsiX19/DataLogs
-clt_advance_curveCold\ Advance_height=357
-ecuConfigFile=mainController.ini
-engine_constantsEngine\ Constants_height=606
-refTable_000_txtResistor3=766
-flexFuelFuel\ Sensor\ Settings_height=670
-refTable_000_txtResistor2=1250
-refTable_000_txtResistor1=3494
-idleAdvanceSettingsIdle\ Advance\ Settings_width=1315
-io_summaryI/O\ Summary_height=751
-WueAnalyzeConsole.warmup_analyzer_curve_selectedDash=Standard
-lambdaTable1TblLambda\ Table_width=680
-veTableDialogVE\ Table_height=568
-afrTable1TblAFR\ Table_height=435
-CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
-injCharsInjector\ Characteristics_height=666
-CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
-refTable_001_txtBiasResistor=2490
-afrTable1TblAFR\ Table_width=544
-outputtest1Test\ Output\ Hardware_height=613
-reset_controlReset\ Control_height=205
-pressureSensorsPressure\ Transducers_height=485
-sparkSettingsSpark\ Settings_width=710
-flexFuelFuel\ Sensor\ Settings_Y=218
-crankPWCranking\ Settings_width=583
-flexFuelFuel\ Sensor\ Settings_X=54
-outputtest1Test\ Output\ Hardware_width=1331
-logTuningPanel_selectionTable2=sparkTbl
-airdensity_curve_Set\ X\ Axis\ Minimum=-40.0
-logTuningPanel_selectionTable1=veTable1Tbl
-ASEAfterstart\ Enrichment(ASE)_width=577
-io_summaryI/O\ Summary_Y=180
-io_summaryI/O\ Summary_X=757
-dwellSettingsDwell\ Settings_width=398
-clt_advance_curveCold\ Advance_Y=377
-Triggers.ActiveTriggers=cltTempWarning|playRacecarWOT|TriggeredPage0 Refresh\:  vssRefresh > 0 |
-clt_advance_curveCold\ Advance_X=757
-engineProtectionHard\ Limit\ Configuration_width=398
-gaugeLimitsGauge\ Limits_height=336
-warmup_analyzer_curve_Set\ X\ Axis\ Minimum=-40.0
-mapCalCalibrate\ MAP_height=520
-mapCalCalibrate\ MAP_Y=295
-mapCalCalibrate\ MAP_X=739
-clt_advance_curveCold\ Advance_width=398
-VeAnalyzeConsole.veTable1Tbl_selectedDash=Standard
-sparkTblIgnition\ Advance\ Table_width=544
-primePWPriming\ Pulsewidth_Y=317
-primePWPriming\ Pulsewidth_X=739
-dwellSettingsDwell\ Settings_height=442
-crankPWCranking\ Settings_height=631
-CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
-dashBoardFile=/dashboard//dashboard.dash
-inj_trimadInjector\ Cyl\ 1-4\ Trims_width=505
-primePWPriming\ Pulsewidth_width=434
-engineProtectionHard\ Limit\ Configuration_Y=242
-ecuSettings=AFR|CAN_COMMANDS_OFF|FAHRENHEIT|NEW_COMMS|enablehardware_test|resetcontrol_standard|
-engineProtectionHard\ Limit\ Configuration_X=757
-refTable_001_chkCelsius=true
-warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_height=503
-cranking_enrich_curve_Set\ X\ Axis\ Minimum=-40.0
-userDash0.DashName=Acceleration Performance
-sparkTblIgnition\ Advance\ Table_Y=236
-sparkTblIgnition\ Advance\ Table_X=503
-useCommonTuneViewDir=false
-baroFuel_curveBaro\ fuel\ correction_height=394
-airdensity_curveIAT\ density\ correction_height=351
-baroFuel_curveBaro\ fuel\ correction_Y=358
-projectDescription=
-baroFuel_curveBaro\ fuel\ correction_X=728
-flexFuelFuel\ Sensor\ Settings_width=833
-firmwareDescription=Speeduino 2024.02
-pressureSensorsPressure\ Transducers_Y=313
-useCommonDashboardDir=false
-pressureSensorsPressure\ Transducers_X=728
-warmup_curve_Set\ X\ Axis\ Minimum=-40.0
-dwellSettingsDwell\ Settings_Y=122
-dwellSettingsDwell\ Settings_X=553
-refTable_001_txtResistor3=200
-refTable_001_txtResistor2=800
-Triggers.culex0r_tune.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
-refTable_001_txtResistor1=5500
-CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
-CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
-gaugeLimitsGauge\ Limits_width=398
-injCharsInjector\ Characteristics_Y=222
-injCharsInjector\ Characteristics_X=757
-VeAnalyzePanel_veTable1Tbl_baseWeight=3.0
-crankPWCranking\ Settings_Y=240
-io_summaryI/O\ Summary_width=398
-crankPWCranking\ Settings_X=664
-sparkSettingsSpark\ Settings_Y=427
-sparkSettingsSpark\ Settings_X=190
-canId=0
-pressureSensorsPressure\ Transducers_width=456
-commPort=
-ASEAfterstart\ Enrichment(ASE)_Y=71
-sensorFiltersAnalog\ sensor\ filters_height=518
+#Last Saved on: Sun Jan 05 14:42:37 PST 2025
+#Sun Jan 05 14:42:37 PST 2025
 ASEAfterstart\ Enrichment(ASE)_X=667
-baudRate=115200
-warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_width=722
-protocolEnvelope=
-refTable_000_chkFahrenheit=true
-afrTable1TblAFR\ Table_Y=338
+ASEAfterstart\ Enrichment(ASE)_Y=71
+ASEAfterstart\ Enrichment(ASE)_height=968
+ASEAfterstart\ Enrichment(ASE)_width=577
+CommSettingBaud\ Rate=115200
+CommSettingCom\ Port=
+CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+CommSettingMSCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
+CommSettingMSCommDriver.controllerInterfaceId=RS232 Serial Interface
+CommSettingzenCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
+CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
+CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
+CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
+CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
+Triggers.ActiveTriggers=cltTempWarning|playRacecarWOT|TriggeredPage0 Refresh\:  vssRefresh > 0 |
+Triggers.culex0r_tune.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
+VeAnalyzeConsole.veTable1Tbl_selectedDash=Standard
+VeAnalyzePanel_veTable1Tbl_baseWeight=3.0
+VeAnalyzePanel_veTable1Tbl_maxWeight=1.7976931348623157E308
+VeAnalyzePanel_veTable1Tbl_minChangeThreshold=0.0
+VeAnalyzePanel_veTable1Tbl_weightThreshold=0.0
+WueAnalyzeConsole.warmup_analyzer_curve_selectedDash=Standard
 afrTable1TblAFR\ Table_X=684
-projectName=vrsiX19
-gaugeLimitsGauge\ Limits_Y=387
+afrTable1TblAFR\ Table_Y=338
+afrTable1TblAFR\ Table_height=435
+afrTable1TblAFR\ Table_width=544
+afterstart_enrichment_curve_Set\ X\ Axis\ Minimum=-40.0
+afterstart_enrichment_time_Set\ X\ Axis\ Minimum=-40.0
+airdensity_curveIAT\ density\ correction_X=704
+airdensity_curveIAT\ density\ correction_Y=380
+airdensity_curveIAT\ density\ correction_height=351
+airdensity_curveIAT\ density\ correction_width=504
+airdensity_curve_Set\ X\ Axis\ Minimum=-40.0
+baroFuel_curveBaro\ fuel\ correction_X=728
+baroFuel_curveBaro\ fuel\ correction_Y=358
+baroFuel_curveBaro\ fuel\ correction_height=394
+baroFuel_curveBaro\ fuel\ correction_width=456
+baudRate=115200
+canId=0
+clt_advance_curveCold\ Advance_X=757
+clt_advance_curveCold\ Advance_Y=377
+clt_advance_curveCold\ Advance_height=357
+clt_advance_curveCold\ Advance_width=398
+clt_advance_curve_Set\ X\ Axis\ Minimum=-40.0
+commPort=
+crankPWCranking\ Settings_X=664
+crankPWCranking\ Settings_Y=240
+crankPWCranking\ Settings_height=631
+crankPWCranking\ Settings_width=583
+cranking_enrich_curve_Set\ X\ Axis\ Minimum=-40.0
+dashBoardFile=/dashboard//dashboard.dash
+dwellSettingsDwell\ Settings_X=553
+dwellSettingsDwell\ Settings_Y=122
+dwellSettingsDwell\ Settings_height=442
+dwellSettingsDwell\ Settings_width=398
+ecuConfigFile=mainController.ini
+ecuSettings=AFR|CAN_COMMANDS_OFF|FAHRENHEIT|NEW_COMMS|enablehardware_test|resetcontrol_standard|
+ecuUid=84f7f795-26fe-4e3b-9e7d-23157fda8f2e
+egoControlAFR/O2_X=729
+egoControlAFR/O2_Y=286
+egoControlAFR/O2_height=539
+egoControlAFR/O2_width=454
+engineProtectionHard\ Limit\ Configuration_X=757
+engineProtectionHard\ Limit\ Configuration_Y=242
+engineProtectionHard\ Limit\ Configuration_height=626
+engineProtectionHard\ Limit\ Configuration_width=398
+engine_constantsEngine\ Constants_X=627
+engine_constantsEngine\ Constants_Y=263
+engine_constantsEngine\ Constants_height=606
+engine_constantsEngine\ Constants_width=669
+firmwareDescription=Speeduino 2024.02
+flexFuelFuel\ Sensor\ Settings_X=54
+flexFuelFuel\ Sensor\ Settings_Y=218
+flexFuelFuel\ Sensor\ Settings_height=670
+flexFuelFuel\ Sensor\ Settings_width=833
 gaugeLimitsGauge\ Limits_X=757
+gaugeLimitsGauge\ Limits_Y=387
+gaugeLimitsGauge\ Limits_height=336
+gaugeLimitsGauge\ Limits_width=398
+iacClosedLoop_curve_Set\ X\ Axis\ Minimum=-40.0
+iat_retard_curveIAT\ timing\ retard_X=757
+iat_retard_curveIAT\ timing\ retard_Y=377
+iat_retard_curveIAT\ timing\ retard_height=357
+iat_retard_curveIAT\ timing\ retard_width=398
+iat_retard_curve_Set\ X\ Axis\ Minimum=32.0
+idleAdvanceSettingsIdle\ Advance\ Settings_X=298
+idleAdvanceSettingsIdle\ Advance\ Settings_Y=363
+idleAdvanceSettingsIdle\ Advance\ Settings_height=385
+idleAdvanceSettingsIdle\ Advance\ Settings_width=1315
+injCharsInjector\ Characteristics_X=757
+injCharsInjector\ Characteristics_Y=222
+injCharsInjector\ Characteristics_height=666
+injCharsInjector\ Characteristics_width=398
+inj_trimadInjector\ Cyl\ 1-4\ Trims_X=703
+inj_trimadInjector\ Cyl\ 1-4\ Trims_Y=282
+inj_trimadInjector\ Cyl\ 1-4\ Trims_height=547
+inj_trimadInjector\ Cyl\ 1-4\ Trims_width=505
+injector_timing_curve_Set\ X\ Axis\ Minimum=0.0
+io_summaryI/O\ Summary_X=757
+io_summaryI/O\ Summary_Y=180
+io_summaryI/O\ Summary_height=751
+io_summaryI/O\ Summary_width=398
+lambdaTable1TblLambda\ Table_X=616
+lambdaTable1TblLambda\ Table_Y=338
+lambdaTable1TblLambda\ Table_height=435
+lambdaTable1TblLambda\ Table_width=680
+lastDisplayedTuneFile=veTableDialog_2025-01-05_14.38.48.msqpart
+logFileDir=/home/chris/workspace/anesthetic/vrsiX19/DataLogs
+logTuningPanel_selectionTable1=veTable1Tbl
+logTuningPanel_selectionTable2=sparkTbl
+mapCalCalibrate\ MAP_X=739
+mapCalCalibrate\ MAP_Y=295
+mapCalCalibrate\ MAP_height=520
+mapCalCalibrate\ MAP_width=433
+outputtest1Test\ Output\ Hardware_X=459
+outputtest1Test\ Output\ Hardware_Y=292
+outputtest1Test\ Output\ Hardware_height=613
+outputtest1Test\ Output\ Hardware_width=1331
+pressureSensorsPressure\ Transducers_X=728
+pressureSensorsPressure\ Transducers_Y=313
+pressureSensorsPressure\ Transducers_height=485
+pressureSensorsPressure\ Transducers_width=456
+primePWPriming\ Pulsewidth_X=739
+primePWPriming\ Pulsewidth_Y=317
+primePWPriming\ Pulsewidth_height=476
+primePWPriming\ Pulsewidth_width=434
+priming_pw_curve_Set\ X\ Axis\ Minimum=-40.0
+projectDescription=
+projectName=vrsiX19
+protocolEnvelope=
+refTable_000_chkCelsius=false
+refTable_000_chkFahrenheit=true
+refTable_000_txtBiasResistor=1100.0
+refTable_000_txtResistor1=3494
+refTable_000_txtResistor2=1250
+refTable_000_txtResistor3=766
+refTable_000_txtTemp1=93
+refTable_000_txtTemp2=150
+refTable_000_txtTemp3=200
+refTable_001_chkCelsius=true
+refTable_001_chkFahrenheit=false
+refTable_001_txtBiasResistor=2490
+refTable_001_txtResistor1=5500
+refTable_001_txtResistor2=800
+refTable_001_txtResistor3=200
+refTable_001_txtTemp1=0
+refTable_001_txtTemp2=50
+refTable_001_txtTemp3=100
+reset_controlReset\ Control_X=757
+reset_controlReset\ Control_Y=453
+reset_controlReset\ Control_height=205
+reset_controlReset\ Control_width=398
+selectedComDriver=Multi Interface MegaSquirt Driver
+sensorFiltersAnalog\ sensor\ filters_X=659
+sensorFiltersAnalog\ sensor\ filters_Y=296
+sensorFiltersAnalog\ sensor\ filters_height=518
+sensorFiltersAnalog\ sensor\ filters_width=593
+sparkSettingsSpark\ Settings_X=190
+sparkSettingsSpark\ Settings_Y=427
+sparkSettingsSpark\ Settings_height=455
+sparkSettingsSpark\ Settings_width=710
+sparkTblIgnition\ Advance\ Table_X=503
+sparkTblIgnition\ Advance\ Table_Y=236
+sparkTblIgnition\ Advance\ Table_height=435
+sparkTblIgnition\ Advance\ Table_width=544
+triggerSettingsTrigger\ Settings_X=712
+triggerSettingsTrigger\ Settings_Y=286
+triggerSettingsTrigger\ Settings_height=539
+triggerSettingsTrigger\ Settings_width=487
+tuneFileDir=/home/chris/Desktop
+useCommonDashboardDir=false
+useCommonTuneViewDir=false
+userDash0.DashName=Acceleration Performance
+userDash0.FileName=Acceleration_Performance.dash
+veTableDialogVE\ Table_X=1272
+veTableDialogVE\ Table_Y=47
+veTableDialogVE\ Table_height=568
+veTableDialogVE\ Table_width=565
+vrsiX19.veTable1Tbl_minCltFilter=130.0
+warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_X=286
+warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_Y=366
+warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_height=503
+warmupWarmup\ Enrichment\ (WUE)\ -\ Percent\ Multiplier_width=722
+warmup_afr_curve_Set\ X\ Axis\ Minimum=-40.0
+warmup_analyzer_curve_Set\ X\ Axis\ Minimum=-40.0
+warmup_curve_Set\ X\ Axis\ Minimum=-40.0
