--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,7 +1,9 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sun Dec 29 14:53:24 PST 2024
-#Sun Dec 29 14:53:24 PST 2024
+#Last Saved on: Sat Jan 25 16:33:05 PST 2025
+#Sat Jan 25 16:33:05 PST 2025
+CommSettingBaud\ Rate=115200
+CommSettingCom\ Port=
 CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 CommSettingMSCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
@@ -12,12 +14,99 @@ CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
+Triggers.ActiveTriggers=cltTempWarning|
+VeAnalyzeConsole.veTableTbl_selectedDash=Standard
+WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
+WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
 baudRate=115200
+canId=-1
 commPort=
+crankingDialogCranking\ Settings_X=748
+crankingDialogCranking\ Settings_Y=252
+crankingDialogCranking\ Settings_height=606
+crankingDialogCranking\ Settings_width=415
 dashBoardFile=/dashboard//dashboard.dash
 ecuConfigFile=mainController.ini
 ecuSettings=AFR|
+ecuUid=b771b0a0-1421-4055-a671-b0ea32302e37
+egoSettingsEGO\ sensor_X=785
+egoSettingsEGO\ sensor_Y=325
+egoSettingsEGO\ sensor_height=461
+egoSettingsEGO\ sensor_width=342
+engineCharsBase\ Engine\ Settings_X=201
+engineCharsBase\ Engine\ Settings_Y=332
+engineCharsBase\ Engine\ Settings_height=566
+engineCharsBase\ Engine\ Settings_width=393
+firmwareDescription=FOME proteus_f7 20240916@e3a628
+ignTestIgnition\ coil\ test_X=1389
+ignTestIgnition\ coil\ test_Y=294
+ignTestIgnition\ coil\ test_height=576
+ignTestIgnition\ coil\ test_width=313
+ignitionSettingsIgnition\ settings_X=615
+ignitionSettingsIgnition\ settings_Y=526
+ignitionSettingsIgnition\ settings_height=468
+ignitionSettingsIgnition\ settings_width=693
+ignitionTableTblIgnition\ Table_X=683
+ignitionTableTblIgnition\ Table_Y=331
+ignitionTableTblIgnition\ Table_height=449
+ignitionTableTblIgnition\ Table_width=546
+ignition_stateDialogignition_state_X=817
+ignition_stateDialogignition_state_Y=327
+ignition_stateDialogignition_state_height=457
+ignition_stateDialogignition_state_width=278
+injTestInjector\ test_X=481
+injTestInjector\ test_Y=252
+injTestInjector\ test_height=576
+injTestInjector\ test_width=496
+injectorConfigInjection\ configuration_X=643
+injectorConfigInjection\ configuration_Y=117
+injectorConfigInjection\ configuration_height=876
+injectorConfigInjection\ configuration_width=625
+injectorPinsInjector\ Outputs_X=783
+injectorPinsInjector\ Outputs_Y=302
+injectorPinsInjector\ Outputs_height=506
+injectorPinsInjector\ Outputs_width=346
+injector_modelDialoginjector_model_X=817
+injector_modelDialoginjector_model_Y=448
+injector_modelDialoginjector_model_height=214
+injector_modelDialoginjector_model_width=278
+ioTestBench\ Test\ &\ Commands_X=702
+ioTestBench\ Test\ &\ Commands_Y=151
+ioTestBench\ Test\ &\ Commands_height=809
+ioTestBench\ Test\ &\ Commands_width=507
+lastDisplayedTuneFile=
+logTuningPanel_selectionTable1=veBlend2Table
+logTuningPanel_selectionTable2=throttle2TrimTbl
+monitoringSettingsFOME\ Console\ Settings_X=807
+monitoringSettingsFOME\ Console\ Settings_Y=442
+monitoringSettingsFOME\ Console\ Settings_height=226
+monitoringSettingsFOME\ Console\ Settings_width=298
+multisparkSettingsMultispark_X=714
+multisparkSettingsMultispark_Y=355
+multisparkSettingsMultispark_height=400
+multisparkSettingsMultispark_width=484
+outputsDialogOutputs_X=900
+outputsDialogOutputs_Y=63
+outputsDialogOutputs_height=887
+outputsDialogOutputs_width=733
 projectDescription=
 projectName=fome_vrsix19
 selectedComDriver=Multi Interface MegaSquirt Driver
+triggerConfigurationTrigger_X=574
+triggerConfigurationTrigger_Y=268
+triggerConfigurationTrigger_height=574
+triggerConfigurationTrigger_width=744
+trigger_advancedAdvanced\ Trigger_X=738
+trigger_advancedAdvanced\ Trigger_Y=222
+trigger_advancedAdvanced\ Trigger_height=666
+trigger_advancedAdvanced\ Trigger_width=435
 useCommonDashboardDir=false
+useCommonTuneViewDir=false
+vrThresholdVR\ Sensor\ Threshold_X=766
+vrThresholdVR\ Sensor\ Threshold_Y=234
+vrThresholdVR\ Sensor\ Threshold_height=642
+vrThresholdVR\ Sensor\ Threshold_width=379
+widebandConfigCAN\ Wideband\ Config_X=729
+widebandConfigCAN\ Wideband\ Config_Y=369
+widebandConfigCAN\ Wideband\ Config_height=372
+widebandConfigCAN\ Wideband\ Config_width=487
