--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,7 +1,15 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sat Jan 25 16:33:05 PST 2025
-#Sat Jan 25 16:33:05 PST 2025
+#Last Saved on: Sun Feb 09 19:18:04 PST 2025
+#Sun Feb 09 19:18:04 PST 2025
+AccelEnrichAccel/Decel\ Enrichment_X=160
+AccelEnrichAccel/Decel\ Enrichment_Y=204
+AccelEnrichAccel/Decel\ Enrichment_height=654
+AccelEnrichAccel/Decel\ Enrichment_width=446
+AccelEnrichAcceleration\ enrichment_X=237
+AccelEnrichAcceleration\ enrichment_Y=451
+AccelEnrichAcceleration\ enrichment_height=427
+AccelEnrichAcceleration\ enrichment_width=446
 CommSettingBaud\ Rate=115200
 CommSettingCom\ Port=
 CommSettingMSCommDriver.RS232\ Serial\ Interface2nd\ Com\ Port=
@@ -14,54 +22,143 @@ CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
-Triggers.ActiveTriggers=cltTempWarning|
+Triggers.ActiveTriggers=
 VeAnalyzeConsole.veTableTbl_selectedDash=Standard
 WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
 WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
+afrTableTblTarget\ AFR\ Table_X=683
+afrTableTblTarget\ AFR\ Table_Y=331
+afrTableTblTarget\ AFR\ Table_height=449
+afrTableTblTarget\ AFR\ Table_width=546
+baroSettingsBaro\ sensor_X=776
+baroSettingsBaro\ sensor_Y=394
+baroSettingsBaro\ sensor_height=322
+baroSettingsBaro\ sensor_width=359
 baudRate=115200
+canBusMainCAN\ Bus\ Communication_X=774
+canBusMainCAN\ Bus\ Communication_Y=198
+canBusMainCAN\ Bus\ Communication_height=715
+canBusMainCAN\ Bus\ Communication_width=364
 canId=-1
+cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_X=1065
+cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_Y=37
+cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_height=544
+cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_width=612
+cltIdleCurveWarmup\ Idle\ multiplier_X=650
+cltIdleCurveWarmup\ Idle\ multiplier_Y=265
+cltIdleCurveWarmup\ Idle\ multiplier_height=580
+cltIdleCurveWarmup\ Idle\ multiplier_width=612
+cltIdleRPMCurveIdle\ Target\ RPM_X=650
+cltIdleRPMCurveIdle\ Target\ RPM_Y=265
+cltIdleRPMCurveIdle\ Target\ RPM_height=580
+cltIdleRPMCurveIdle\ Target\ RPM_width=612
+cltSensorCLT\ Sensor_X=907
+cltSensorCLT\ Sensor_Y=368
+cltSensorCLT\ Sensor_height=476
+cltSensorCLT\ Sensor_width=483
+cltSensorCLT\ sensor_X=714
+cltSensorCLT\ sensor_Y=317
+cltSensorCLT\ sensor_height=476
+cltSensorCLT\ sensor_width=483
+cltTimingCorrCurveWarmup\ timing\ correction_X=648
+cltTimingCorrCurveWarmup\ timing\ correction_Y=348
+cltTimingCorrCurveWarmup\ timing\ correction_height=415
+cltTimingCorrCurveWarmup\ timing\ correction_width=616
 commPort=
+crankingCltCurveCranking\ Coolant\ Temperature\ Multiplier_X=882
+crankingCltCurveCranking\ Coolant\ Temperature\ Multiplier_Y=545
+crankingCltCurveCranking\ Coolant\ Temperature\ Multiplier_height=415
+crankingCltCurveCranking\ Coolant\ Temperature\ Multiplier_width=616
+crankingCltCurve_showText=true
 crankingDialogCranking\ Settings_X=748
 crankingDialogCranking\ Settings_Y=252
 crankingDialogCranking\ Settings_height=606
 crankingDialogCranking\ Settings_width=415
+cylinderBankSelectCylinder\ Banks_X=817
+cylinderBankSelectCylinder\ Banks_Y=339
+cylinderBankSelectCylinder\ Banks_height=432
+cylinderBankSelectCylinder\ Banks_width=278
 dashBoardFile=/dashboard//dashboard.dash
+dwellSettingsDwell_X=643
+dwellSettingsDwell_Y=185
+dwellSettingsDwell_height=740
+dwellSettingsDwell_width=625
 ecuConfigFile=mainController.ini
 ecuSettings=AFR|
 ecuUid=b771b0a0-1421-4055-a671-b0ea32302e37
-egoSettingsEGO\ sensor_X=785
-egoSettingsEGO\ sensor_Y=325
+egoSettingsEGO\ sensor_X=829
+egoSettingsEGO\ sensor_Y=407
 egoSettingsEGO\ sensor_height=461
 egoSettingsEGO\ sensor_width=342
+energySystemsBattery\ and\ Alternator\ Settings_X=788
+energySystemsBattery\ and\ Alternator\ Settings_Y=307
+energySystemsBattery\ and\ Alternator\ Settings_height=497
+energySystemsBattery\ and\ Alternator\ Settings_width=335
 engineCharsBase\ Engine\ Settings_X=201
 engineCharsBase\ Engine\ Settings_Y=332
 engineCharsBase\ Engine\ Settings_height=566
 engineCharsBase\ Engine\ Settings_width=393
+etbDialogElectronic\ Throttle\ Body_X=589
+etbDialogElectronic\ Throttle\ Body_Y=195
+etbDialogElectronic\ Throttle\ Body_height=720
+etbDialogElectronic\ Throttle\ Body_width=734
+fancyHardwareDialogFancy\ Boards_X=793
+fancyHardwareDialogFancy\ Boards_Y=333
+fancyHardwareDialogFancy\ Boards_height=444
+fancyHardwareDialogFancy\ Boards_width=326
 firmwareDescription=FOME proteus_f7 20240916@e3a628
+fuelClosedLoopDialogClosed\ loop\ fuel\ correction_X=1247
+fuelClosedLoopDialogClosed\ loop\ fuel\ correction_Y=52
+fuelClosedLoopDialogClosed\ loop\ fuel\ correction_height=600
+fuelClosedLoopDialogClosed\ loop\ fuel\ correction_width=606
+iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_X=351
+iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_Y=275
+iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_height=544
+iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_width=612
+iatSensorIAT\ Sensor_X=714
+iatSensorIAT\ Sensor_Y=317
+iatSensorIAT\ Sensor_height=476
+iatSensorIAT\ Sensor_width=483
+idleSettingsIdle\ settings_X=764
+idleSettingsIdle\ settings_Y=105
+idleSettingsIdle\ settings_height=901
+idleSettingsIdle\ settings_width=384
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_X=757
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_Y=365
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_height=381
+idleTimingPidCorrDialogClosed-loop\ idle\ timing_width=398
 ignTestIgnition\ coil\ test_X=1389
 ignTestIgnition\ coil\ test_Y=294
 ignTestIgnition\ coil\ test_height=576
 ignTestIgnition\ coil\ test_width=313
-ignitionSettingsIgnition\ settings_X=615
-ignitionSettingsIgnition\ settings_Y=526
+ignitionSettingsIgnition\ settings_X=888
+ignitionSettingsIgnition\ settings_Y=590
 ignitionSettingsIgnition\ settings_height=468
 ignitionSettingsIgnition\ settings_width=693
-ignitionTableTblIgnition\ Table_X=683
-ignitionTableTblIgnition\ Table_Y=331
+ignitionTableTblIgnition\ Table_X=963
+ignitionTableTblIgnition\ Table_Y=105
 ignitionTableTblIgnition\ Table_height=449
 ignitionTableTblIgnition\ Table_width=546
 ignition_stateDialogignition_state_X=817
 ignition_stateDialogignition_state_Y=327
 ignition_stateDialogignition_state_height=457
 ignition_stateDialogignition_state_width=278
-injTestInjector\ test_X=481
-injTestInjector\ test_Y=252
-injTestInjector\ test_height=576
-injTestInjector\ test_width=496
-injectorConfigInjection\ configuration_X=643
-injectorConfigInjection\ configuration_Y=117
+injPhaseTableTblInjection\ Phase_X=691
+injPhaseTableTblInjection\ Phase_Y=475
+injPhaseTableTblInjection\ Phase_height=449
+injPhaseTableTblInjection\ Phase_width=546
+injTestInjector\ test_X=408
+injTestInjector\ test_Y=247
+injTestInjector\ test_height=600
+injTestInjector\ test_width=500
+injectorConfigInjection\ configuration_X=104
+injectorConfigInjection\ configuration_Y=121
 injectorConfigInjection\ configuration_height=876
 injectorConfigInjection\ configuration_width=625
+injectorNonlinearInjector\ small-pulse\ correction_X=776
+injectorNonlinearInjector\ small-pulse\ correction_Y=303
+injectorNonlinearInjector\ small-pulse\ correction_height=504
+injectorNonlinearInjector\ small-pulse\ correction_width=360
 injectorPinsInjector\ Outputs_X=783
 injectorPinsInjector\ Outputs_Y=302
 injectorPinsInjector\ Outputs_height=506
@@ -75,8 +172,17 @@ ioTestBench\ Test\ &\ Commands_Y=151
 ioTestBench\ Test\ &\ Commands_height=809
 ioTestBench\ Test\ &\ Commands_width=507
 lastDisplayedTuneFile=
+logFileDir=/home/chris/workspace/anesthetic/fome_vrsix19/DataLogs
 logTuningPanel_selectionTable1=veBlend2Table
 logTuningPanel_selectionTable2=throttle2TrimTbl
+mapCurvesMAP\ sampling_X=641
+mapCurvesMAP\ sampling_Y=143
+mapCurvesMAP\ sampling_height=824
+mapCurvesMAP\ sampling_width=629
+mapSettingsMAP\ sensor_X=759
+mapSettingsMAP\ sensor_Y=339
+mapSettingsMAP\ sensor_height=432
+mapSettingsMAP\ sensor_width=394
 monitoringSettingsFOME\ Console\ Settings_X=807
 monitoringSettingsFOME\ Console\ Settings_Y=442
 monitoringSettingsFOME\ Console\ Settings_height=226
@@ -85,28 +191,61 @@ multisparkSettingsMultispark_X=714
 multisparkSettingsMultispark_Y=355
 multisparkSettingsMultispark_height=400
 multisparkSettingsMultispark_width=484
+oilPressureSensorOil\ pressure_X=710
+oilPressureSensorOil\ pressure_Y=347
+oilPressureSensorOil\ pressure_height=416
+oilPressureSensorOil\ pressure_width=492
 outputsDialogOutputs_X=900
 outputsDialogOutputs_Y=63
 outputsDialogOutputs_height=887
 outputsDialogOutputs_width=733
+primingFuelPulsePanelPriming\ fuel\ pulse_X=641
+primingFuelPulsePanelPriming\ fuel\ pulse_Y=305
+primingFuelPulsePanelPriming\ fuel\ pulse_height=501
+primingFuelPulsePanelPriming\ fuel\ pulse_width=629
 projectDescription=
 projectName=fome_vrsix19
+sdCardSD\ Card\ Logger_X=782
+sdCardSD\ Card\ Logger_Y=423
+sdCardSD\ Card\ Logger_height=265
+sdCardSD\ Card\ Logger_width=347
 selectedComDriver=Multi Interface MegaSquirt Driver
+softwareKnockSoftware\ Knock_X=479
+softwareKnockSoftware\ Knock_Y=209
+softwareKnockSoftware\ Knock_height=692
+softwareKnockSoftware\ Knock_width=954
+stagedInjectionStaged\ injection_X=643
+stagedInjectionStaged\ injection_Y=274
+stagedInjectionStaged\ injection_height=562
+stagedInjectionStaged\ injection_width=625
+tpsTpsAccelTblTPS/TPS\ Acceleration\ Extra\ Fuel(ms)_X=646
+tpsTpsAccelTblTPS/TPS\ Acceleration\ Extra\ Fuel(ms)_Y=177
+tpsTpsAccelTblTPS/TPS\ Acceleration\ Extra\ Fuel(ms)_height=321
+tpsTpsAccelTblTPS/TPS\ Acceleration\ Extra\ Fuel(ms)_width=370
+tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_X=90
+tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_Y=419
+tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_height=529
+tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_width=424
 triggerConfigurationTrigger_X=574
 triggerConfigurationTrigger_Y=268
 triggerConfigurationTrigger_height=574
 triggerConfigurationTrigger_width=744
-trigger_advancedAdvanced\ Trigger_X=738
-trigger_advancedAdvanced\ Trigger_Y=222
+trigger_advancedAdvanced\ Trigger_X=104
+trigger_advancedAdvanced\ Trigger_Y=244
 trigger_advancedAdvanced\ Trigger_height=666
 trigger_advancedAdvanced\ Trigger_width=435
+tuneFileDir=/home/chris/workspace/anesthetic/fome_vrsix19
 useCommonDashboardDir=false
 useCommonTuneViewDir=false
+veTableDialogVE_X=177
+veTableDialogVE_Y=369
+veTableDialogVE_height=641
+veTableDialogVE_width=876
 vrThresholdVR\ Sensor\ Threshold_X=766
 vrThresholdVR\ Sensor\ Threshold_Y=234
 vrThresholdVR\ Sensor\ Threshold_height=642
 vrThresholdVR\ Sensor\ Threshold_width=379
-widebandConfigCAN\ Wideband\ Config_X=729
-widebandConfigCAN\ Wideband\ Config_Y=369
+widebandConfigCAN\ Wideband\ Config_X=1241
+widebandConfigCAN\ Wideband\ Config_Y=482
 widebandConfigCAN\ Wideband\ Config_height=372
 widebandConfigCAN\ Wideband\ Config_width=487
