--- a/vrsiX19/projectCfg/project.properties
+++ b/vrsiX19/projectCfg/project.properties
@@ -1,7 +1,7 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sun Jan 05 14:42:37 PST 2025
-#Sun Jan 05 14:42:37 PST 2025
+#Last Saved on: Sat Feb 01 10:04:46 PST 2025
+#Sat Feb 01 10:04:46 PST 2025
 ASEAfterstart\ Enrichment(ASE)_X=667
 ASEAfterstart\ Enrichment(ASE)_Y=71
 ASEAfterstart\ Enrichment(ASE)_height=968
@@ -18,7 +18,7 @@ CommSettingzenCommDriver.RS232\ Serial\ InterfaceBaud\ Rate=115200
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceBluetooth\ Port=false
 CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
-Triggers.ActiveTriggers=cltTempWarning|playRacecarWOT|TriggeredPage0 Refresh\:  vssRefresh > 0 |
+Triggers.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
 Triggers.culex0r_tune.ActiveTriggers=TriggeredPage0 Refresh\:  vssRefresh > 0 |
 VeAnalyzeConsole.veTable1Tbl_selectedDash=Standard
 VeAnalyzePanel_veTable1Tbl_baseWeight=3.0
