--- a/can-devices/stm32_dash/platformio.ini
+++ b/can-devices/stm32_dash/platformio.ini
@@ -12,6 +12,8 @@
 platform = ststm32
 board = genericSTM32F401CC
 framework = arduino
+monitor_baud = 115200
+monitor_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
 	rlogiacco/CircularBuffer@^1.4.0
