i do not understand embedded programming
* why does this work
* i got a impl on a branch (copied stm32_dash
  to can-devices folder) and it just booted but rendered
  a white screen. i copied all of those changes one by one
  back onto main, where the screen still worked, trying to find
  the bug, but then it just worked?
* wtf????

--- a/stm32_dash/platformio.ini
+++ b/stm32_dash/platformio.ini
@@ -12,10 +12,12 @@
 platform = ststm32
 board = genericSTM32F401CC
 framework = arduino
+monitor_baud = 115200
+monitor_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
 	rlogiacco/CircularBuffer@^1.4.0
-	mikalhart/TinyGPSPlus@1.0.3
+	autowp/autowp-mcp2515@^1.2.1
 build_unflags =
 	-std=gnu++17
 build_flags = 
