add knock counter to car display

--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,7 +1,7 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sat Feb 22 22:10:38 PST 2025
-#Sat Feb 22 22:10:38 PST 2025
+#Last Saved on: Sun Mar 16 21:14:32 PDT 2025
+#Sun Mar 16 21:14:32 PDT 2025
 AccelEnrichAccel/Decel\ Enrichment_X=568
 AccelEnrichAccel/Decel\ Enrichment_Y=378
 AccelEnrichAccel/Decel\ Enrichment_height=427
