--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,10 +1,11 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Sun Mar 16 21:14:32 PDT 2025
-#Sun Mar 16 21:14:32 PDT 2025
+#Last Saved on: Mon Mar 31 22:48:17 PDT 2025
+#Mon Mar 31 22:48:17 PDT 2025
+2DTable_ignitionTableTbl_tableInitialDir=/home/chris/Desktop
 AccelEnrichAccel/Decel\ Enrichment_X=568
 AccelEnrichAccel/Decel\ Enrichment_Y=378
-AccelEnrichAccel/Decel\ Enrichment_height=427
+AccelEnrichAccel/Decel\ Enrichment_height=451
 AccelEnrichAccel/Decel\ Enrichment_width=446
 AccelEnrichAcceleration\ enrichment_X=237
 AccelEnrichAcceleration\ enrichment_Y=451
@@ -123,10 +124,15 @@ fancyHardwareDialogFancy\ Boards_Y=333
 fancyHardwareDialogFancy\ Boards_height=444
 fancyHardwareDialogFancy\ Boards_width=326
 firmwareDescription=FOME proteus_f7 20250220@ec3512
+fome_vrsix19.veTableTbl_minRPMFilter=1500.0
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_X=1247
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_Y=52
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_height=600
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_width=606
+fuelTrimTbl6Fuel\ trim\ cyl\ 6_X=431
+fuelTrimTbl6Fuel\ trim\ cyl\ 6_Y=107
+fuelTrimTbl6Fuel\ trim\ cyl\ 6_height=499
+fuelTrimTbl6Fuel\ trim\ cyl\ 6_width=686
 iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_X=351
 iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_Y=275
 iatFuelCorrCurveIntake\ air\ temperature\ fuel\ Multiplier_height=544
@@ -147,14 +153,14 @@ ignTestIgnition\ coil\ test_X=1389
 ignTestIgnition\ coil\ test_Y=294
 ignTestIgnition\ coil\ test_height=576
 ignTestIgnition\ coil\ test_width=313
-ignitionSettingsIgnition\ settings_X=752
-ignitionSettingsIgnition\ settings_Y=256
+ignitionSettingsIgnition\ settings_X=579
+ignitionSettingsIgnition\ settings_Y=251
 ignitionSettingsIgnition\ settings_height=468
 ignitionSettingsIgnition\ settings_width=693
-ignitionTableTblIgnition\ Table_X=963
-ignitionTableTblIgnition\ Table_Y=105
-ignitionTableTblIgnition\ Table_height=449
-ignitionTableTblIgnition\ Table_width=546
+ignitionTableTblIgnition\ Table_X=77
+ignitionTableTblIgnition\ Table_Y=231
+ignitionTableTblIgnition\ Table_height=630
+ignitionTableTblIgnition\ Table_width=1053
 ignition_stateDialogignition_state_X=817
 ignition_stateDialogignition_state_Y=327
 ignition_stateDialogignition_state_height=457
@@ -203,10 +209,10 @@ mapSettingsMAP\ sensor_X=759
 mapSettingsMAP\ sensor_Y=339
 mapSettingsMAP\ sensor_height=432
 mapSettingsMAP\ sensor_width=394
-maxKnockRetardTblMax\ knock\ retard_X=817
-maxKnockRetardTblMax\ knock\ retard_Y=411
-maxKnockRetardTblMax\ knock\ retard_height=289
-maxKnockRetardTblMax\ knock\ retard_width=278
+maxKnockRetardTblMax\ knock\ retard_X=1014
+maxKnockRetardTblMax\ knock\ retard_Y=316
+maxKnockRetardTblMax\ knock\ retard_height=449
+maxKnockRetardTblMax\ knock\ retard_width=547
 monitoringSettingsFOME\ Console\ Settings_X=807
 monitoringSettingsFOME\ Console\ Settings_Y=442
 monitoringSettingsFOME\ Console\ Settings_height=226
@@ -238,10 +244,10 @@ sdCardSD\ Card\ Logger_Y=423
 sdCardSD\ Card\ Logger_height=265
 sdCardSD\ Card\ Logger_width=347
 selectedComDriver=Multi Interface MegaSquirt Driver
-softwareKnockSoftware\ Knock_X=798
-softwareKnockSoftware\ Knock_Y=247
-softwareKnockSoftware\ Knock_height=723
-softwareKnockSoftware\ Knock_width=939
+softwareKnockSoftware\ Knock_X=711
+softwareKnockSoftware\ Knock_Y=137
+softwareKnockSoftware\ Knock_height=822
+softwareKnockSoftware\ Knock_width=1056
 stagedInjectionStaged\ injection_X=643
 stagedInjectionStaged\ injection_Y=274
 stagedInjectionStaged\ injection_height=562
@@ -265,8 +271,8 @@ trigger_advancedAdvanced\ Trigger_width=435
 tuneFileDir=/home/chris/workspace/anesthetic/fome_vrsix19
 useCommonDashboardDir=false
 useCommonTuneViewDir=false
-veTableDialogVE_X=901
-veTableDialogVE_Y=65
+veTableDialogVE_X=421
+veTableDialogVE_Y=155
 veTableDialogVE_height=641
 veTableDialogVE_width=876
 vrThresholdVR\ Sensor\ Threshold_X=766
