--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,7 +1,9 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Mon Mar 31 22:48:17 PDT 2025
-#Mon Mar 31 22:48:17 PDT 2025
+#Last Saved on: Thu Apr 03 19:01:24 PDT 2025
+#Thu Apr 03 19:01:24 PDT 2025
+2DTable_fuelTrimTbl3_tableInitialDir=/home/chris/Desktop
+2DTable_fuelTrimTbl5_tableInitialDir=/home/chris/Desktop
 2DTable_ignitionTableTbl_tableInitialDir=/home/chris/Desktop
 AccelEnrichAccel/Decel\ Enrichment_X=568
 AccelEnrichAccel/Decel\ Enrichment_Y=378
@@ -28,8 +30,8 @@ VeAnalyzeConsole.veTableTbl_selectedDash=Standard
 WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
 WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
 afrTableTblTarget\ AFR\ Table_X=683
-afrTableTblTarget\ AFR\ Table_Y=331
-afrTableTblTarget\ AFR\ Table_height=449
+afrTableTblTarget\ AFR\ Table_Y=162
+afrTableTblTarget\ AFR\ Table_height=618
 afrTableTblTarget\ AFR\ Table_width=546
 auxLinearSensorsAux\ Sensors_X=788
 auxLinearSensorsAux\ Sensors_Y=185
@@ -129,6 +131,18 @@ fuelClosedLoopDialogClosed\ loop\ fuel\ correction_X=1247
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_Y=52
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_height=600
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_width=606
+fuelTrimTbl1Fuel\ trim\ cyl\ 1_X=817
+fuelTrimTbl1Fuel\ trim\ cyl\ 1_Y=427
+fuelTrimTbl1Fuel\ trim\ cyl\ 1_height=480
+fuelTrimTbl1Fuel\ trim\ cyl\ 1_width=588
+fuelTrimTbl3Fuel\ trim\ cyl\ 3_X=817
+fuelTrimTbl3Fuel\ trim\ cyl\ 3_Y=427
+fuelTrimTbl3Fuel\ trim\ cyl\ 3_height=257
+fuelTrimTbl3Fuel\ trim\ cyl\ 3_width=278
+fuelTrimTbl5Fuel\ trim\ cyl\ 5_X=817
+fuelTrimTbl5Fuel\ trim\ cyl\ 5_Y=427
+fuelTrimTbl5Fuel\ trim\ cyl\ 5_height=257
+fuelTrimTbl5Fuel\ trim\ cyl\ 5_width=278
 fuelTrimTbl6Fuel\ trim\ cyl\ 6_X=431
 fuelTrimTbl6Fuel\ trim\ cyl\ 6_Y=107
 fuelTrimTbl6Fuel\ trim\ cyl\ 6_height=499
@@ -157,8 +171,8 @@ ignitionSettingsIgnition\ settings_X=579
 ignitionSettingsIgnition\ settings_Y=251
 ignitionSettingsIgnition\ settings_height=468
 ignitionSettingsIgnition\ settings_width=693
-ignitionTableTblIgnition\ Table_X=77
-ignitionTableTblIgnition\ Table_Y=231
+ignitionTableTblIgnition\ Table_X=656
+ignitionTableTblIgnition\ Table_Y=319
 ignitionTableTblIgnition\ Table_height=630
 ignitionTableTblIgnition\ Table_width=1053
 ignition_stateDialogignition_state_X=817
@@ -244,6 +258,10 @@ sdCardSD\ Card\ Logger_Y=423
 sdCardSD\ Card\ Logger_height=265
 sdCardSD\ Card\ Logger_width=347
 selectedComDriver=Multi Interface MegaSquirt Driver
+softwareKnockKnock\ sensing_X=479
+softwareKnockKnock\ sensing_Y=209
+softwareKnockKnock\ sensing_height=692
+softwareKnockKnock\ sensing_width=954
 softwareKnockSoftware\ Knock_X=711
 softwareKnockSoftware\ Knock_Y=137
 softwareKnockSoftware\ Knock_height=822
@@ -271,8 +289,8 @@ trigger_advancedAdvanced\ Trigger_width=435
 tuneFileDir=/home/chris/workspace/anesthetic/fome_vrsix19
 useCommonDashboardDir=false
 useCommonTuneViewDir=false
-veTableDialogVE_X=421
-veTableDialogVE_Y=155
+veTableDialogVE_X=997
+veTableDialogVE_Y=62
 veTableDialogVE_height=641
 veTableDialogVE_width=876
 vrThresholdVR\ Sensor\ Threshold_X=766
