--- a/fome_vrsix19/projectCfg/project.properties
+++ b/fome_vrsix19/projectCfg/project.properties
@@ -1,14 +1,14 @@
 #Project Attributes.
 #TunerStudio by EFI Analytics, Inc
-#Last Saved on: Thu Apr 03 19:01:24 PDT 2025
-#Thu Apr 03 19:01:24 PDT 2025
+#Last Saved on: Fri Apr 18 17:51:16 PDT 2025
+#Fri Apr 18 17:51:16 PDT 2025
 2DTable_fuelTrimTbl3_tableInitialDir=/home/chris/Desktop
 2DTable_fuelTrimTbl5_tableInitialDir=/home/chris/Desktop
 2DTable_ignitionTableTbl_tableInitialDir=/home/chris/Desktop
 AccelEnrichAccel/Decel\ Enrichment_X=568
 AccelEnrichAccel/Decel\ Enrichment_Y=378
 AccelEnrichAccel/Decel\ Enrichment_height=451
-AccelEnrichAccel/Decel\ Enrichment_width=446
+AccelEnrichAccel/Decel\ Enrichment_width=474
 AccelEnrichAcceleration\ enrichment_X=237
 AccelEnrichAcceleration\ enrichment_Y=451
 AccelEnrichAcceleration\ enrichment_height=427
@@ -27,6 +27,10 @@ CommSettingzenCommDriver.RS232\ Serial\ InterfaceCom\ Port=/dev/ttyACM0
 CommSettingzenCommDriver.controllerInterfaceId=RS232 Serial Interface
 Triggers.ActiveTriggers=
 VeAnalyzeConsole.veTableTbl_selectedDash=Standard
+VeAnalyzePanel_veTableTbl_baseWeight=3.0
+VeAnalyzePanel_veTableTbl_maxWeight=1.7976931348623157E308
+VeAnalyzePanel_veTableTbl_minChangeThreshold=0.0
+VeAnalyzePanel_veTableTbl_weightThreshold=0.0
 WueAnalyzeConsole.wueAnalyzer_warmup_curve_selectedDash=Standard
 WueAnalyzePanel_wueAnalyzer_warmup_curve_applyPeriod=Manually
 afrTableTblTarget\ AFR\ Table_X=683
@@ -48,9 +52,9 @@ canBusMainCAN\ Bus\ Communication_height=715
 canBusMainCAN\ Bus\ Communication_width=364
 canBusMainCAN\ Bus_X=358
 canBusMainCAN\ Bus_Y=203
-canBusMainCAN\ Bus_height=715
-canBusMainCAN\ Bus_width=364
-canId=-1
+canBusMainCAN\ Bus_height=739
+canBusMainCAN\ Bus_width=372
+canId=0
 cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_X=1065
 cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_Y=37
 cltFuelCorrCurveWarmup\ fuel\ manual\ Multiplier_height=544
@@ -99,7 +103,7 @@ dwellSettingsDwell_Y=185
 dwellSettingsDwell_height=740
 dwellSettingsDwell_width=625
 ecuConfigFile=mainController.ini
-ecuSettings=AFR|
+ecuSettings=LAMBDA|
 ecuStimulatorECU\ stimulator_X=801
 ecuStimulatorECU\ stimulator_Y=350
 ecuStimulatorECU\ stimulator_height=410
@@ -109,6 +113,10 @@ egoSettingsEGO\ sensor_X=829
 egoSettingsEGO\ sensor_Y=407
 egoSettingsEGO\ sensor_height=461
 egoSettingsEGO\ sensor_width=342
+egtInputsEGT\ inputs_X=817
+egtInputsEGT\ inputs_Y=369
+egtInputsEGT\ inputs_height=372
+egtInputsEGT\ inputs_width=278
 energySystemsBattery\ and\ Alternator\ Settings_X=788
 energySystemsBattery\ and\ Alternator\ Settings_Y=307
 energySystemsBattery\ and\ Alternator\ Settings_height=497
@@ -123,9 +131,10 @@ etbDialogElectronic\ Throttle\ Body_height=720
 etbDialogElectronic\ Throttle\ Body_width=734
 fancyHardwareDialogFancy\ Boards_X=793
 fancyHardwareDialogFancy\ Boards_Y=333
-fancyHardwareDialogFancy\ Boards_height=444
+fancyHardwareDialogFancy\ Boards_height=360
 fancyHardwareDialogFancy\ Boards_width=326
-firmwareDescription=FOME proteus_f7 20250220@ec3512
+firmwareDescription=FOME proteus_f7 20250409@3b7381
+fome_vrsix19.veTableTbl_minCltFilter=60.0
 fome_vrsix19.veTableTbl_minRPMFilter=1500.0
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_X=1247
 fuelClosedLoopDialogClosed\ loop\ fuel\ correction_Y=52
@@ -167,14 +176,22 @@ ignTestIgnition\ coil\ test_X=1389
 ignTestIgnition\ coil\ test_Y=294
 ignTestIgnition\ coil\ test_height=576
 ignTestIgnition\ coil\ test_width=313
+ignTrimTbl5Ign\ trim\ cyl\ 5_X=817
+ignTrimTbl5Ign\ trim\ cyl\ 5_Y=427
+ignTrimTbl5Ign\ trim\ cyl\ 5_height=257
+ignTrimTbl5Ign\ trim\ cyl\ 5_width=278
+ignitionIatCorrTableTblIgnition\ Intake\ Air\ Temp\ correction_X=807
+ignitionIatCorrTableTblIgnition\ Intake\ Air\ Temp\ correction_Y=395
+ignitionIatCorrTableTblIgnition\ Intake\ Air\ Temp\ correction_height=321
+ignitionIatCorrTableTblIgnition\ Intake\ Air\ Temp\ correction_width=298
 ignitionSettingsIgnition\ settings_X=579
 ignitionSettingsIgnition\ settings_Y=251
 ignitionSettingsIgnition\ settings_height=468
 ignitionSettingsIgnition\ settings_width=693
-ignitionTableTblIgnition\ Table_X=656
-ignitionTableTblIgnition\ Table_Y=319
+ignitionTableTblIgnition\ Table_X=0
+ignitionTableTblIgnition\ Table_Y=25
 ignitionTableTblIgnition\ Table_height=630
-ignitionTableTblIgnition\ Table_width=1053
+ignitionTableTblIgnition\ Table_width=966
 ignition_stateDialogignition_state_X=817
 ignition_stateDialogignition_state_Y=327
 ignition_stateDialogignition_state_height=457
@@ -203,16 +220,16 @@ injector_modelDialoginjector_model_X=817
 injector_modelDialoginjector_model_Y=448
 injector_modelDialoginjector_model_height=214
 injector_modelDialoginjector_model_width=278
-ioTestBench\ Test\ &\ Commands_X=702
-ioTestBench\ Test\ &\ Commands_Y=151
-ioTestBench\ Test\ &\ Commands_height=809
+ioTestBench\ Test\ &\ Commands_X=413
+ioTestBench\ Test\ &\ Commands_Y=157
+ioTestBench\ Test\ &\ Commands_height=846
 ioTestBench\ Test\ &\ Commands_width=507
 knock_controllerDialogknock_controller_X=817
 knock_controllerDialogknock_controller_Y=177
 knock_controllerDialogknock_controller_height=757
 knock_controllerDialogknock_controller_width=278
 lastDisplayedTuneFile=Modified - fome_vrsix19_2025-02-08_18.44.12.msq
-logFileDir=/home/chris/Desktop/DATA-LOGS
+logFileDir=/home/chris/Desktop
 logTuningPanel_selectionTable1=veBlend2Table
 logTuningPanel_selectionTable2=throttle2TrimTbl
 mapCurvesMAP\ sampling_X=641
@@ -253,13 +270,18 @@ primingFuelPulsePanelPriming\ fuel\ pulse_height=501
 primingFuelPulsePanelPriming\ fuel\ pulse_width=629
 projectDescription=
 projectName=fome_vrsix19
+protocolEnvelope=
+revLimitsRev\ limiter_X=554
+revLimitsRev\ limiter_Y=304
+revLimitsRev\ limiter_height=502
+revLimitsRev\ limiter_width=804
 sdCardSD\ Card\ Logger_X=782
 sdCardSD\ Card\ Logger_Y=423
 sdCardSD\ Card\ Logger_height=265
 sdCardSD\ Card\ Logger_width=347
 selectedComDriver=Multi Interface MegaSquirt Driver
-softwareKnockKnock\ sensing_X=479
-softwareKnockKnock\ sensing_Y=209
+softwareKnockKnock\ sensing_X=739
+softwareKnockKnock\ sensing_Y=278
 softwareKnockKnock\ sensing_height=692
 softwareKnockKnock\ sensing_width=954
 softwareKnockSoftware\ Knock_X=711
@@ -280,8 +302,8 @@ tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_height=529
 tpsTspRpmCorrectionTPS/TPS\ AE\ RPM\ Correction_width=424
 triggerConfigurationTrigger_X=57
 triggerConfigurationTrigger_Y=319
-triggerConfigurationTrigger_height=598
-triggerConfigurationTrigger_width=748
+triggerConfigurationTrigger_height=574
+triggerConfigurationTrigger_width=744
 trigger_advancedAdvanced\ Trigger_X=104
 trigger_advancedAdvanced\ Trigger_Y=244
 trigger_advancedAdvanced\ Trigger_height=666
@@ -297,6 +319,14 @@ vrThresholdVR\ Sensor\ Threshold_X=766
 vrThresholdVR\ Sensor\ Threshold_Y=234
 vrThresholdVR\ Sensor\ Threshold_height=642
 vrThresholdVR\ Sensor\ Threshold_width=379
+vvtPidDialogVVT\ Configuration\ &\ PID_X=564
+vvtPidDialogVVT\ Configuration\ &\ PID_Y=233
+vvtPidDialogVVT\ Configuration\ &\ PID_height=645
+vvtPidDialogVVT\ Configuration\ &\ PID_width=784
+vvtTable1TblIntake\ VVT\ closed\ loop\ Target_X=807
+vvtTable1TblIntake\ VVT\ closed\ loop\ Target_Y=395
+vvtTable1TblIntake\ VVT\ closed\ loop\ Target_height=321
+vvtTable1TblIntake\ VVT\ closed\ loop\ Target_width=298
 widebandConfigCAN\ Wideband\ Config_X=1241
 widebandConfigCAN\ Wideband\ Config_Y=482
 widebandConfigCAN\ Wideband\ Config_height=372
