--- a/fome_vrsix19/projectCfg/vehicle.properties
+++ b/fome_vrsix19/projectCfg/vehicle.properties
@@ -1,3 +1,13 @@
 #Vehicles Attributes.
 #TunerStudio by Philip Tobin
-#Sun Feb 16 12:43:32 PST 2025
+#Sat Apr 05 12:02:08 PDT 2025
+converterStall=
+fifthGearRatio=
+finalDriveRatio=
+firstGearRatio=
+fourthGearRatio=
+secondGearRatio=
+sixthGearRatio=
+thirdGearRatio=
+transmissionType=Manual
+weight=
